--- a/src/partials/course.html
+++ b/src/partials/course.html
@@ -3,81 +3,118 @@
 	<div class="course__title">
 		<h2>ПРОГРАММЫ</h2>
 	</div>
-	<div class="course__block l">
+	<div class="course__wrap-backgradient l">
+		<div class="course__block">
 		<!-- begin course__desc  -->
-		<div class="course__desc l-col4">
-			<div class="course__left-desc l-col5">
-				<div class="course__name"><h2>НАЗВАНИЕ БАЗОВОГО КУРСА</h2></div>
-				<div class="course__data"><span>20.03.2016</span> - <span>21.06.2016</span></div>
-				<div class="course__pricing">
-					<button><a href="#" id="ord_course">Записаться</a></button>
-					<p><span>3200</span> грн</p>
-				</div>
-			</div>
-			<div class="course__right-desc l-col6">
-				<div class="course__text">]
-					<p>Программы в сфере коммуникаций продолжительностью до 3 месяцев. Цель программы — дать студенту.В різний час складалася з 10—12 класів, які діляться на 3 ступені — молодші, середні, старші. Школу відвідують в дитячому віці. Вивчають навчальні предмети. Щоб закінчити навчальний заклад, необхідно скласти іспити, учні отримують «Атестат зрілості» (поняття, широко вживане в радянську добу). Нині учні після завершення навчання у школі отримують Свідоцтво про базову або повну середню освіту.</p>
-				</div>
-				<div class="course__text-more"><a href="#">ПОДРОБНЕЕ</a><i class="icon-arrow-right"> ></i></div>
-			</div>
-		</div>
-		<!-- end coursae__desc --> 
-
-		<!-- begin course__coach  -->
-		<div class="course__coach l-col5">
-			<div class="vertical-line"></div>
-			<div class="course__coach-inner">
-				<span>Тренери</span>
-				<div class="course__coach-persone">
-					<div class="course__coach-persone-inner">
-						<div class="course__coach-pic"><img src="/persone1_small.jpg"></div>
-						<p>Марина Стародубская</p>
-					</div>
-
-					<div class="course__coach-persone-inner">
-						<div class="course__coach-pic"><img src="/persone2_small.jpg"></div>
-						<p>Ярына Ключковская</p>
+			<div class="course__desc l-col4">
+				<div class="course__left-desc l-col6">
+					<div class="course__name"><h2>НАЗВАНИЕ БАЗОВОГО КУРСА</h2></div>
+					<div class="course__data"><span>20.03.2016</span> - <span>21.06.2016</span></div>
+					<div class="course__pricing">
+						<button>
+							<a href="/" id="ord_course">
+								<div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+								Записаться
+							</a>
+						</button>
+						<div class="price"><span>3200</span> грн</div>
 					</div>
 				</div>
+				<div class="course__right-desc l-col7">
+					<div class="course__text">
+						<p>Программы в сфере коммуникаций продолжительностью до 3 месяцев.<br/> Цель программы — дать студенту. В різний час складалася з 10—12 класів, які діляться на 3 ступені — молодші, середні, старші. Школу відвідують в дитячому віці. Вивчають навчальні предмети. Щоб закінчити навчальний заклад, необхідно скласти іспити, учні отримують «Атестат зрілості» (поняття, широко вживане в радянську добу). Нині учні після завершення навчання у школі отримують Свідоцтво про базову або повну середню освіту.ту. В різний час складалася з 10—12 класів, які діляться на 3 ступені — молодші, середні, старші. Школу відвідують в дитячому віці. Вивчають навчальні предмети. Щоб закінчити навчальний заклад, необхідно скласти іспити, учні отримують «Атестат зрілості» (поняття, широко вживане в радянську добу). Нині учні після завершення навчання у школі отримують Свідоцтво про базову або повну середню освіту.</p>
+						
+					</div>
+					<div class="course__text-more"><a href="#">ПОДРОБНЕЕ</a><i class="icon-arrow-right"></i></div>
+				</div>
 			</div>
+			<!-- end coursae__desc -->
+
+			<!-- begin course__coach  -->
+			<div class="course__coach l-col5">
+				<div class="vertical-line"></div>
+				<div class="course__coach-inner">
+					<span>Тренери</span>
+					<div class="course__coach-persone">
+						<div class="course__coach-persone-inner">
+							<a href="#">
+								<div class="course__coach-pic"><img src="http://lorempixel.com/200/800/people/"></div>
+								<p>Марина Стародубская </p>
+							</a>
+						</div>
+
+						<div class="course__coach-persone-inner">
+							<a href="#">
+								<div class="course__coach-pic"><img src="http://lorempixel.com/200/200/people/"></div>
+								<p>Ярына Ключковская</p>
+							</a>
+						</div>
+
+						<div class="course__coach-persone-inner">
+							<a href="#">
+								<div class="course__coach-pic"><img src="http://lorempixel.com/200/800/people/"></div>
+								<p>Марина Стародубская </p>
+							</a>
+						</div>
+
+						<div class="course__coach-persone-inner">
+							<a href="#">
+								<div class="course__coach-pic"><img src="http://lorempixel.com/200/200/people/"></div>
+								<p>Ярына Ключковская</p>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end course__coach -->
 		</div>
-		<!-- end course__coach -->
 	</div>
 <!--  NEW BLOCK -->
-	<div class="course__block l">
-		<!-- begin course__desc  -->
-		<div class="course__desc l-col4">
-			<div class="course__left-desc l-col5">
-				<div class="course__name"><h2>НАЗВАНИЕ БАЗОВОГО КУРСА</h2></div>
-				<div class="course__data"><span>20.03.2016</span> - <span>21.06.2016</span></div>
-				<div class="course__pricing">
-					<button><a href="#" id="ord_course">Записаться</a></button>
-					<p><span>3200</span> грн</p>
-				</div>
-			</div>
-			<div class="course__right-desc l-col6">
-				<div class="course__text">]
-					<p>Программы в сфере коммуникаций продолжительностью до 3 месяцев. Цель программы — дать студенту.В різний час складалася з 10—12 класів, які діляться на 3 ступені — молодші, середні, старші. Школу відвідують в дитячому віці. Вивчають навчальні предмети. Щоб закінчити навчальний заклад, необхідно скласти іспити, учні отримують «Атестат зрілості» (поняття, широко вживане в радянську добу). Нині учні після завершення навчання у школі отримують Свідоцтво про базову або повну середню освіту.</p>
-				</div>
-				<div class="course__text-more"><a href="#">ПОДРОБНЕЕ</a><i class="icon-arrow-right"> ></i></div>
-			</div>
-		</div>
-		<!-- end coursae__desc --> 
-
-		<!-- begin course__coach  -->
-		<div class="course__coach l-col5">
-			<div class="vertical-line"></div>
-			<div class="course__coach-inner">
-				<span>Тренери</span>
-				<div class="course__coach-persone">
-					<div class="course__coach-persone-inner">
-						<div class="course__coach-pic"><img src="/persone1_small.jpg"></div>
-						<p>Марина Стародубская</p>
+	<div class="course__wrap-backgradient l">
+		<div class="course__block">
+			<!-- begin course__desc  -->
+			<div class="course__desc l-col4">
+				<div class="course__left-desc l-col6">
+					<div class="course__name"><h2>НАЗВАНИЕ БАЗОВОГО КУРСА</h2></div>
+					<div class="course__data"><span>20.03.2016</span> - <span>21.06.2016</span></div>
+					<div class="course__pricing">
+						<button>
+							<a href="" id="ord_course">
+								<div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+								Записаться
+							</a>
+						</button>
+						<div class="price"><span>3200</span> грн</div>
 					</div>
+				</div>
+				<div class="course__right-desc l-col7">
+					<div class="course__text">
+						<p>Программы в сфере коммуникаций продолжительностью до 3 месяцев. <br/>Цель программы — дать студенту. В різний час складалася з 10—12 класів, які діляться на 3 ступені — молодші, середні, старші. Школу відвідують в дитячому віці. Вивчають навчальні предмети. Щоб закінчити навчальний заклад, необхідно скласти іспити, учні отримують «Атестат зрілості» (поняття, широко вживане в радянську добу). Нині учні після завершення навчання у школі отримують Свідоцтво про базову або повну середню освіту.</p>
+					</div>
+					<div class="course__text-more"><a href="#">ПОДРОБНЕЕ</a><i class="icon-arrow-right"></i></div>
+				</div>
+			</div>
+			<!-- end coursae__desc -->
 
-					<div class="course__coach-persone-inner">
-						<div class="course__coach-pic"><img src="/persone2_small.jpg"></div>
-						<p>Ярына Ключковская</p>
+			<!-- begin course__coach  -->
+			<div class="course__coach l-col5">
+				<div class="vertical-line"></div>
+				<div class="course__coach-inner">
+					<span>Тренери</span>
+					<div class="course__coach-persone">
+						<div class="course__coach-persone-inner">
+							<a href="#">
+								<div class="course__coach-pic"><img src="http://lorempixel.com/200/800/people/"></div>
+								<p>Марина Стародубская </p>
+							</a>
+						</div>
+
+						<div class="course__coach-persone-inner">
+							<a href="#">
+								<div class="course__coach-pic"><img src="http://lorempixel.com/200/200/people/"></div>
+								<p>Ярына Ключковская</p>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -85,9 +122,9 @@
 		<!-- end course__coach -->
 	</div>
 
-		<!-- begin line  -->
+</div>
+<!-- end course -->		
+<!-- begin line  -->
 	<div class="line">
 	</div>
 	<!-- end line -->
-</div>
-<!-- end course -->
