--- a/src/partials/personality.html
+++ b/src/partials/personality.html
@@ -16,7 +16,7 @@
 					<i class="icon-fb"></i>
 				</a>
 				<a class="personality__li" href="#">
-					<i class="icon-in"></i>
+					<i class="icon-li"></i>
 				</a>
 			</div>
 		</div>
